--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+getrandom = { features = ["js"] }
+rand = "0.8.3"
 wasm-bindgen = "0.2.63"
 web-sys = { version = "0.3.51", features = [ "console" ] }
 
